<resources>
    <string name="app_name">StyleList</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="facebook_app_id">949988298379222</string>
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="signup_facebook">Sign up with Facebook</string>
    <string name="edit">Edit Profile</string>
    <string name="my_style">My Style</string>
    <string name="find_friend_title">Find Friends</string>
    <string name="intro_1_text">To start off, complete the registration and login, then tag the styles and items that interest you.</string>
    <string name="intro_2_text">Next, follow friends and others, which, matched with your already selected styles, will shape the content that will be pushed to your home screen.</string>
    <string name="intro_3_text">Tagged items in a picture will highlight when pressed. You can tag your own items too. Simply draw around the items in your photo and tag them for sale, hire or just to inspire.</string>
    <string name="intro_4_text">When you buy or sell items, you pay/receive money via paypal and link directly with the StyleList member to receive/post your goods.</string>
    <string name="menu_feeds">Feeds</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_recent">Recent</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_support">Support</string>
    <string name="menu_help">Help</string>
    <string name="menu_terms">Terms and Use</string>
    <string name="menu_contact">Contact us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_find_friends">Find Friends</string>
    <string name="menu_log_out">Log out</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_chat">Message</string>
    <string name="tab_activity">Activity</string>
    <string name="post_detail_title">Post Detail</string>
    <string name="style_description">Select the styles that you wish to follow</string>
    <string name="tab_recent">Recent</string>
    <string name="tab_trending">Trending</string>
    <string name="tab_featured">Featured</string>
    <string name="tab_inspire">For Inspire</string>
    <string name="tab_for_sale">For Sale</string>
    <string name="tab_for_hire">For Hire</string>
    <string name="profile_placeholder_bio">Place your bio here</string>
    <string name="choose_friend_title">Choose Friend</string>
    <string name="m1970s_trends">The 1970s were all about those flared jeans, multicolored shirts and even tracksuits. Although it isn’t as popular today, there are certain watered-down versions of it that make it more palatable. The 1970s trend is associated with the hippie movement that helped popularize it.</string>
    <string name="biker">The Biker style makes heavy use of leather jackets and pants, ripped jeans and slim-fit shirts. As a rule of thumb, all the elements that compile the outfit have got to be dark. This style has a note of elegance to it if used well and can easily turn some heads around.</string>
    <string name="blackonblack">The name of the style should be enough of a clue as to what it requires: black clothing, entirely or partially. It is, obviously, a casual-type of style that is perfect to be worn when talking a walk or even going down to the grocery store. Here’s a tip: wear white sneakers to emphasize the black. </string>
    <string name="businessman">This is almost identical to the formal style, but whereas the latter can be “tweaked”, to put it like this, in order to add or remove certain elements, the former cannot. It is the peak of elegance and says a lot about the personality of the one who is a follower of the style. </string>
    <string name="casual">Breezy – this is the most suitable adjective to describe this particular style. It can feature anything from a white t-shirt, a nice jacket and jeans to a shirt, a thin sweater and a beanie. The shoes are more often than not sneakers or leather shoes. When done properly, it can be a sight to behold. </string>
    <string name="casualbusinessman">The Casual Businessman trend is meant to make a man look good both at the office and out on the street, as it frequently features jackets, simple jeans, and stylish shoes. The trend stands to show that sometimes, a common polo shirt can be better than a super official one. </string>
    <string name="classy">This implies the idea of wearing a suit or a combination of casual jeans with a nice jacket. To a certain extent, it’s just a subcategory of the Businessman style, but this one is more allowing in terms of what you can wear and still remain, as the name says it, classy.</string>
    <string name="country">Denim jackets, shirts, boots, and hats – this is everything you need in order to nail the country style. This is very popular in the rural American areas, but it works just as fine on the streets of a city, especially if the outfit is put together tastefully. </string>
    <string name="cuban_collar">Get a nice suit, a leather bag and a pair of sunglasses and you got yourself dressed according to the smart style. This is a classy yet extremely casual style and can have different variations like, a white shirt, black jacket and jeans (ripped or not). </string>
    <string name="formal">The Formal style is the pickiest man style. T-shirts are not allowed: you’ve got to wear a suit, a tie and nice shoes to get it right. This is the style corporatists and business owners are into. It’s got a very steadfast dress code that cannot be violated if you mean business. </string>
    <string name="funky">This is perhaps the most bohemian style of all. The rule is “There are no rules!” Pants can be of any color, you can wear a bandana with a bowtie – anything you can imagine would work as long as there’s an explosion of color – not to be taken as kitsch. </string>
    <string name="gangster">This particular style is a shout-out to the classiness of the criminals from the ‘20s. It is best represented by tailored suits with the classic stripes, fedoras and ties or bowties, as well as suspenders. It’s a style that has defied time and goes on stronger with every passing year.</string>
    <string name="hawaiian">The Hawaiian trend can make you feel like you’re in a paradisiac retreat even when you’re thousands of miles away from it. It relies heavily on shirts with flower patterns and sometimes on Hawaiian landscapes. It works best with a cigar in the corner of the mouth and a cocktail in your hand! </string>
    <string name="hipster">The hipster trend draws heavy inspiration from vintage clothing with a sprinkle of what makes people automatically think of indie music. The trend usually features slim-fit, above-the-ankle jeans, shirts, scarves, beanies, glasses, leather shoes and various hats.  Sweaters, jackets and suspenders are common, too.   </string>
    <string name="lumbersexual">The Lumbersexual Trend is as much of a lifestyle as it is a fashion fad and it has transformed the usual attire of the lumberjack into a worldwide craze. The trend usually features a shirt with square patterns and jeans and indispensably a beard, a couple of tattoos and glasses (optional).</string>
    <string name="post_soviet">This somewhat political aesthetic has gotten a lot of attention lately. To some extent, any piece of clothing that has Russian letters on it falls into the PS trend. So do leather jackets, jumpsuits, hoodies, etc. It is somehow reminiscent of the punk/skinhead fashion that is still in vogue today.</string>
    <string name="preppy">This particular trend is fundamentally for those who want to sport a college-y look, so it features polo shirts with large collars and V neck sweaters. The Preppy trend is immediately recognizable by the fact that the one who dresses as such looks like he wears a college, alumnus uniform. </string>
    <string name="retro">The Retro trend refers to a style that encompasses all the “vintage” trends starting with the ‘20s and well into the ‘80s. Printed, multicolored shirts and jeans with suspenders, scarves, sweaters, flared pants and bowties are just the peak of the iceberg when it comes to the elements you can use to pull off a retro outfit. </string>
    <string name="rockster">The Rockster style is almost synonymous with the biker style that inspired it in the first place. Leather jackets, bandanas tied to black jeans and various chains are frequent elements. It is as casual as it is elegant and just a tad menacing in certain circumstances. It suits pretty much all men.</string>
    <string name="sexy">The Sexy style needs, first of all, the right attitude and then the fitting clothes to go with that. It is usually worn with a beard and clothes that emphasize your physical appearance, especially when you work out. The clothes don’t matter as much as your attitude, keep that in mind. </string>
    <string name="smart">Get a nice suit, a leather bag and a pair of sunglasses and you got yourself dressed according to the smart style. This is a classy yet extremely casual style and can have different variations like, a white shirt, black jacket and jeans (ripped or not). </string>
    <string name="sportswear">The Sportswear, also known as Activewear Trend, was first popularized during the ‘90s and it made a surprising comeback last year, with trainers, tennis shirts, sneakers, jerseys and all sorts of polos becoming in vogue again, especially among teenagers. All in all, it’s a style that makes you look like you’re about to hit the gym. </string>
    <string name="street">Actually, the street style could be best described as a loose mixture of multiple styles. It can represent an outfit put together with a coat, sweater and a pair of jeans, as well as a leather jacket, sweater and hoodie. It is a somewhat elusive style, since it defies a clean-cut description. </string>
    <string name="urban">The Urban style is extremely popular among millennials and is usually representative of the rap genre of music. It features really casual outfits with large t-shirts, jeans, and sneakers, plus caps and sunglasses. It is one of the oldest and most enduring styles in the world. </string>
    <string name="utilitarian">Cargo pants, factory clothing, pants down the boots, camouflage clothes, leather bags and denim – these are just a few of the things that compile the Utilitarian trend. Basically, this trend mixes casual outfits with garments that would usually go in industrial uniforms. It is manifold with even the cowboy outfit being Utilitarian.</string>
</resources>