<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.stylelist.Activity.LoginActivity"
    android:background="@color/gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include2"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/edit_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edit_login_password_field"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:focusable="true"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black_overlay" />

        <RelativeLayout
            android:id="@+id/btn_login_facebook"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rounded_corners_facebook"
            android:gravity="center_horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="false"
                    android:src="@mipmap/ic_facebook" />

                <com.stylelist.CustomViews.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/common_padding_large2"
                    android:layout_alignParentTop="false"
                    android:layout_toEndOf="@+id/imageView14"
                    android:layout_toRightOf="@+id/imageView14"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:padding="8dp"
                    app:customFont="GT-Walsheim-Regular.ttf"
                    android:text="@string/login_facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_medium3" />
            </RelativeLayout>
        </RelativeLayout>

        <com.stylelist.CustomViews.CustomFontButton
            android:id="@+id/btn_login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_above="@+id/btn_login_facebook"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corners_log_in"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_medium3"
            android:gravity="center"
            app:customFont="GT-Walsheim-Regular.ttf"/>

        <EditText
            android:id="@+id/edit_login_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="@color/white"
            android:focusable="true"
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black_overlay" />
    </RelativeLayout>

    <include
        layout="@layout/custom_back_actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:id="@+id/include2" />


</RelativeLayout>
